--- a/ansible/roles/master/templates/dl.nginx.j2
+++ b/ansible/roles/master/templates/dl.nginx.j2
@@ -5,7 +5,7 @@ server {
     access_log logs/dl.access.log main;
 
     location / {
-        root /srv/http/dl;
+        root {{ buildmaster_builds_location }};
         autoindex on;
     }
 }
