Move fifoci into its own role.

--- a/ansible/roles/master/templates/changes.config.vars.j2
+++ b/ansible/roles/master/templates/changes.config.vars.j2
@@ -18,5 +18,5 @@ URL={{ dolphin_repository }}/commit/
 
 # Buildbot address and credentials
 BUILDBOT_ADDR={{ buildmaster_web_host }}:{{ buildmaster_web_port }}
-BUILDBOT_CREDS={{ changes_buildmaster_user }}:{{ webauth_password }}
+BUILDBOT_CREDS={{ webauth_user }}:{{ webauth_password }}
 
