Correct buildbot work directory in the launch agent

--- a/ansible/roles/slave/templates/net.buildbot.slave.plist.j2
+++ b/ansible/roles/slave/templates/net.buildbot.slave.plist.j2
@@ -27,7 +27,7 @@
 	<key>UserName</key>
   <string>{{ buildbot_username }}</string>
 	<key>WorkingDirectory</key>
-  <string>/Users/{{ buildbot_username }}</string>
+    <string>{{ buildbot_path }}</string>
 	<key>SessionCreate</key>
 	<true/>
 </dict>
